# odoo19-modiule-nepali-plate-extraction-model

./: README.md  anotherREADME.md  pyproject.toml
application/: app.py  character_processing.py  config.py  image_processing.py  model_loader.py  utils.py
